<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="6dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_fav_anime"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/small_rounded"
            tools:src="@drawable/dummy_thumb_anime" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_fav_dub_anime"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:alpha="0.8"
            android:clickable="false"
            android:elevation="2dp"
            android:focusable="false"
            android:textSize="11sp"
            app:chipCornerRadius="6dp"
            app:chipEndPadding="8dp"
            app:chipMinHeight="24dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="6dp"
            app:textEndPadding="4dp"
            app:textStartPadding="6dp"
            tools:text="@string/chip_dub_anime" />
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fav_anime_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="2dp"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="1"
            android:textColor="@color/text_color"
            app:drawableEndCompat="@drawable/ic_star_24dp"
            tools:text="@string/tv_fav_anime_rating" />

    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fav_anime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:paddingHorizontal="4dp"
        android:textSize="14sp"
        tools:text="@string/tv_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_fav_anime_eps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:text="@string/label_fav_anime_eps" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fav_anime_eps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="11sp"
            tools:text="@string/tv_fav_anime_eps" />
    </LinearLayout>
</LinearLayout>