<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_new_anime"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/tiny_rounded"
            tools:src="@drawable/dummy_thumb_anime" />

    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_new_anime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ellipsize="middle"
        android:gravity="start"
        android:maxLines="2"
        android:paddingHorizontal="4dp"
        android:textSize="14sp"
        tools:text="@string/tv_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_new_anime_eps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:text="@string/label_new_anime_eps" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_anime_eps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="11sp"
            tools:text="@string/tv_new_anime_eps" />
    </LinearLayout>
</LinearLayout>