<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="6dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_recent_anime"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/tiny_rounded"
            tools:src="@drawable/dummy_thumb_anime" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_recent_anime_dub"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:elevation="4dp"
            android:focusable="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="gone"
            app:chipBackgroundColor="@android:color/transparent"
            app:chipCornerRadius="6dp"
            app:chipEndPadding="8dp"
            app:chipMinHeight="24dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="6dp"
            app:chipSurfaceColor="#CC333333"
            app:textEndPadding="4dp"
            app:textStartPadding="6dp"
            tools:text="@string/chip_dub_anime"
            tools:visibility="visible" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            style="@style/Widget.Material3.LinearProgressIndicator"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="4dp"
            app:indicatorTrackGapSize="@null"
            app:trackStopIndicatorSize="@null"
            app:trackThickness="3dp"
            tools:progress="70" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_recent_anime_playlist"
            style="@style/Widget.Material3.Chip.Input.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:clickable="false"
            android:elevation="4dp"
            android:focusable="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:chipBackgroundColor="@android:color/transparent"
            app:chipCornerRadius="6dp"
            app:chipEndPadding="3dp"
            app:chipMinHeight="24dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="3dp"
            app:chipSurfaceColor="#CC333333"
            app:closeIcon="@drawable/ic_playlist_play_24"
            app:closeIconEndPadding="3dp"
            app:closeIconSize="14dp"
            app:closeIconStartPadding="3dp"
            app:closeIconTint="@color/white"
            app:textEndPadding="6dp"
            app:textStartPadding="6dp"
            tools:text="@string/tv_recent_anime_playlist" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_recent_anime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:paddingHorizontal="4dp"
        android:textSize="14sp"
        tools:text="@string/tv_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recent_anime_eps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:text="@string/tv_recent_anime_eps" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recent_anime_prog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="11sp"
            tools:text="@string/tv_recent_anime_prog" />
    </LinearLayout>
</LinearLayout>